SQOOP-2508: Sqoop2: Findbugs: Fix warnings in connector-sdk module
(Colin Ma via Jarek Jarcec Cecho)